src/objects/FormElement__c.object
<CustomObject>
    <description>Object that represents a field on a Community Form</description>
    <fields>
        <fullName>ConfirmationError__c</fullName>
        <inlineHelpText>Complete with the error message when the confirmation is required and not ok</inlineHelpText>
        <label>Confirmation Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationLabel__c</fullName>
        <inlineHelpText>Complete with the Field confirmation label when the field requires confirmation</inlineHelpText>
        <label>Confirmation Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationPlaceholder__c</fullName>
        <label>Confirmation Placeholder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the field needs to be confirmed with a 2nd input (e.g. Email Confirmation)</inlineHelpText>
        <label>Confirmation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <inlineHelpText>Complete with the field name defined in the Wrapper Class</inlineHelpText>
        <label>Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <inlineHelpText>Complete with the label to display in the form</inlineHelpText>
        <label>Field Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Multi-Picklist</fullName>
                </value>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Multi-Checkbox</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormSection__c</fullName>
        <label>Form Section</label>
        <referenceTo>FormSection__c</referenceTo>
        <relationshipLabel>Form Element</relationshipLabel>
        <relationshipName>FormFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FormValidation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Validation</label>
        <referenceTo>FormValidation__c</referenceTo>
        <relationshipName>Form_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <inlineHelpText>Complete with the information that will be displayed as help on the form field</inlineHelpText>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the field is required</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxLength__c</fullName>
        <label>Max Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Complete with the order of the field needs to be displayed in the form</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <inlineHelpText>If type is Picklist, complete with the available values separated by comma</inlineHelpText>
        <label>Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder__c</fullName>
        <label>Place Holder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FormObjectsStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StyleClass__c</fullName>
        <inlineHelpText>Complete with the desired CSS class to be set</inlineHelpText>
        <label>Style Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextAreaRows__c</fullName>
        <label>Text Area Rows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Element</label>
    <nameField>
        <label>Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Element</pluralLabel>
    <recordTypes>
        <fullName>Component</fullName>
        <active>true</active>
        <label>Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field</fullName>
        <active>true</active>
        <label>Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>HTML</fullName>
        <active>true</active>
        <label>HTML</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NoDefaultValue</fullName>
        <active>true</active>
        <description>This Validation Rule prevents the User to save a Default value when the field type for the Form Element is equal to &quot;Date&quot;.</description>
        <errorConditionFormula>ISPICKVAL(FieldType__c, &apos;Date&apos;) &amp;&amp; NOT(ISBLANK( DefaultValue__c))</errorConditionFormula>
        <errorDisplayField>DefaultValue__c</errorDisplayField>
        <errorMessage>Can&apos;t set Default Value for Field Type = Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TextAreaRowsOnlyForTextArea</fullName>
        <active>true</active>
        <errorConditionFormula>(  ISPICKVAL(FieldType__c,&apos;TextArea&apos;) &amp;&amp; ( ISBLANK(TextAreaRows__c) || TextAreaRows__c &lt; 1) ) || (NOT(ISPICKVAL(FieldType__c,&apos;TextArea&apos;)) &amp;&amp; NOT(ISBLANK(TextAreaRows__c)))</errorConditionFormula>
        <errorMessage>TextAreaRows can only be set for TextArea type fields.</errorMessage>
    </validationRules>
</CustomObject>